Sync up with current content.

--- a/ipp/index.html
+++ b/ipp/index.html
@@ -91,83 +91,79 @@ layout: bare
     <h3>Standards-Track Drafts</h3>
 
     <p>IPP 3D Printing Extensions v1.1:
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ipp3d11-20180704.pdf">Clean</a>
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ipp3d11-20190201.pdf">Clean</a>
     &middot;
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ipp3d11-20180704-rev.pdf">Redlined</a>
-    (Prototype Draft - Last Updated July 4, 2018)</p>
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ipp3d11-20190201-rev.pdf">Redlined</a>
+    (Stable Draft - Last Updated February 1, 2019, PWG Call for Objections until March 29, 2019)</p>
 
     <p>IPP Document Object v1.1:
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippdocobject11-20181022.pdf">Clean</a>
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippdocobject11-20190318.pdf">Clean</a>
     &middot;
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippdocobject11-201801022-rev.pdf">Redlined</a> (Interim Draft - Last Updated October 22, 2018)</p>
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippdocobject11-20190318-rev.pdf">Redlined</a> (Stable Draft - Last Updated March 18, 2019)</p>
 
     <p>IPP Everywhere™ v1.1:
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippeve11-20180926.pdf">Clean</a>
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippeve11-20190128.pdf">Clean</a>
     &middot;
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippeve11-20180926-rev.pdf">Redlined</a>
-    (Prototype Draft - Last Updated September 26, 2018)</p>
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippeve11-20190128-rev.pdf">Redlined</a>
+    (Stable Draft - Last Updated January 28, 2019)</p>
 
     <p>IPP Everywhere™ Printer Self-Certification Manual v1.1:
     <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippeveselfcert11-20180704.pdf">Clean</a>
     &middot;
     <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippeveselfcert11-20180704-rev.pdf">Redlined</a> (Prototype Draft - Last Updated July 4, 2018)</p>
 
-    <p>IPP Job Extensions v1.1 (JOBEXT): <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippjobext11-20181023.pdf">Clean</a>
+    <p>IPP Job Extensions v2.0 (JOBEXT): <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippjobext20-20190315.pdf">Clean</a>
     &middot;
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippjobext11-20181023-rev.pdf">Redlined</a> (Initial Draft - Last Updated October 23, 2018)</p>
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippjobext20-20190315-rev.pdf">Redlined</a> (Prototype Draft - Last Updated March 15, 2019)</p>
 
-    <p>IPP Job and Printer Extensions - Set 2 v2.0 (JPS2): <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippjobprinterext2v20-20180904.pdf">Clean</a>
+    <p>IPP Job and Printer Extensions - Set 2 v2.0 (JPS2): <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippjobprinterext2v20-20190214.pdf">Clean</a>
     <!-- &middot;
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippjobprinterext20-20180821-rev.pdf">Redlined</a>--> (Initial Draft - Last Updated September 4, 2018)</p>
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippjobprinterext20-20190214-rev.pdf">Redlined</a>--> (Interim Draft - Last Updated February 14, 2019)</p>
 
-    <p>IPP System Service (SYSTEM): <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippsystem10-20180701.pdf">Clean</a>
+    <p>IPP System Service (SYSTEM): <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippsystem10-20190130.pdf">Clean</a>
     &middot;
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippsystem10-20180701-rev.pdf">Redlined</a> (Prototype Draft - Last Updated July 1, 2018)</p>
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippsystem10-20190130-rev.pdf">Redlined</a> (Prototype Draft - Last Updated January 30, 2019)</p>
 
-    <p>MFD Alerts v1.1: <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-pmpmfdalerts10-20180813.pdf">Clean</a>
+    <p>MFD Alerts v1.1: <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-pwgmfdalerts11-20190317.pdf">Clean</a>
     &middot;
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-pmpmfdalerts10-20180813-rev.pdf">Redlined</a> (Initial Draft - Last Updated August 13, 2018)></p>
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-pwgmfdalerts11-20190317-rev.pdf">Redlined</a> (Stable Draft - Last Updated March 17, 2019, PWG Call for Objections until April 12, 2019)></p>
 
     <h3>Registration Drafts</h3>
 
-    <p>IPP Job Reprint Password:
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippreprintpwd-20180620.pdf">Clean</a>
+    <p>IPP Encrypted Jobs and Documents v1.0 (TRUSTNOONE):
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ipptrustnoone10-20190131.pdf">Clean</a>
     &middot;
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippreprintpwd-20180620-rev.pdf">Redlined</a>
-    (Interim Draft - Last Updated June 20, 2018)</p>
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ipptrustnoone10-20190131-rev.pdf">Redlined</a>
+    (Interim Draft - Last Updated January 31, 2019)</p>
 
     <h3>White Paper/Tech Brief/Best Practice Drafts</h3>
 
-    <p>How to Use the Internet Printing Protocol:
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippguide-20181109.epub">EPUB</a>
-    &middot;
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippguide-20181109.html">HTML</a>
-    &middot;
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippguide-20181109.pdf">PDF</a>
-    (Interim Draft - Last Updated November 9, 2018)</p>
-
     <p>IPP Authentication Methods:
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/whitepaper/tb-ippauth-20181019.pdf">Clean</a>
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippauth-20190304.pdf">Clean</a>
     &middot;
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/whitepaper/tb-ippauth-20181019-rev.pdf">Redlined</a>
-    (Interim Draft - Last Updated October 19, 2018)</p>
-
-    <p>IPP Encrypted Jobs and Documents v1.0 (TRUSTNOONE):
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ipptrustnoone10-20180328.pdf">Clean</a>
-    &middot;
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ipptrustnoone10-20180328-rev.pdf">Redlined</a>
-    (Interim Draft - Last Updated March 28, 2018)</p>
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippauth-20190304-rev.pdf">Redlined</a>
+    (LCRC Draft - Last Updated March 4, 2019, PWG WG Last Call Completed Successfully)</p>
 
     <p>PWG Safe G-Code Subset for 3D Printing:
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-pwgsafegcode10-20180704.pdf">Clean</a>
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-pwgsafegcode10-20190318.pdf">Clean</a>
     &middot;
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-pwgsafegcode10-20180704-rev.pdf">Redlined</a>
-    (Prototype Draft - Last Updated July 4, 2018)</p>
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-pwgsafegcode10-20190318-rev.pdf">Redlined</a>
+    &middot;
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/lcrc-pwgsafegcode10.txt">LCRC Comments</a>
+    (LCRC Draft - Last Updated March 18, 2019, PWG WG Last Call Completed Successfully)</p>
   </div>
 </div>
 <div class="row pwg-panel pwg-alt-2">
   <div class="col-md-12 col-sm-12">
     <h2 id="PUBLISHED">Published Work</h2>
+
+    <h3>Books</h3>
+
+    <p>How to Use the Internet Printing Protocol:
+    <a href="ippguide.html">HTML</a>
+    <a href="ippguide.pdf">PDF</a>
+    <a href="ippguide.epub">EPUB</a></p>
+
 
     <h3>Standards <a class="badge badge-primary badge-pill" href="#" id="standards" role="button" data-toggle="popover" data-container="body" data-content="A PWG Standard is a specification that has been approved by the Printer Working Group membership and has demonstrated interoperability.">i</a></h3>
 
