Standardize layout of workgroup pages.

--- a/ids/index.html
+++ b/ids/index.html
@@ -1,54 +1,72 @@
 ---
-title: Imaging Device Security Workgroup
-layout: default
+title: Imaging Device Security (IDS) Workgroup
+layout: bare
 ---
 
-<style>
-  ul.nav-pills li { background: #525dbf; border-radius: 5px; color: #ffffff; font-size: 90%; margin-bottom: 5px; margin-right: 5px; }
-  ul.nav-pills li a { color: #ffffff; }
-  ul.nav-pills li a:hover { background: #8a8fbf; color: #ffffff; }
-</style>
-<h2>Charter</h2>
+<div class="row pwg-panel pwg-base">
+  <div class="col-md-12 col-sm-12">
+    <h1>Imaging Device Security (IDS) Workgroup</h1>
+    <p>Establishing and providing liaisons with public standards bodies concerning security topics, standards, and protection profiles for Hardcopy Devices.</p>
+    <ul class="nav nav-pills">
+      <li class="nav-item" role="presentation"><a class="nav-link" href="#ABOUT">About</a></li>
+      <li class="nav-item" role="presentation"><a class="nav-link" href="#DRAFTS">Working Drafts</a></li>
+      <li class="nav-item" role="presentation"><a class="nav-link" href="#PUBLISHED">Published Work</a></li>
+      <li class="nav-item" role="presentation"><a class="nav-link" href="#REFERENCES">References</a></li>
+    </ul>
+  </div>
+</div>
+<div class="row pwg-panel">
+  <div class="col-md-12 col-sm-12">
+    <h2 id="ABOUT">About the IDS Workgroup</h2>
 
-<p>The Imaging Device Security (IDS) workgroup is chartered to establish and provide liaisons with public standards bodies concerning security topics, standards, and protection profiles for Hardcopy Devices.</p>
+    <p>Approved Charter: <a  href="http://ftp.pwg.org/pub/pwg/ids/charter/ch-ids-charter-20170720.pdf">View</a></p>
 
-<ul class="nav nav-pills">
-  <li role="presentation"><a href="http://ftp.pwg.org/pub/pwg/ids/charter/ch-ids-charter-20170720.pdf">View Approved Charter</a></li>
-</ul>
+    <h3>Officers</h3>
 
-<h2>Officers</h2>
+    <p>Chair: <a href="mailto:Alan.Sukert@xerox.com">Alan Sukert (Xerox)</a><br>
+    Vice-Chair: Vacant<br>
+    Secretary: Vacant</p>
 
-<p>Chair: <a href="mailto:Alan.Sukert@xerox.com">Alan Sukert (Xerox)</a><br>
-Vice-Chair: Vacant<br>
-Secretary: Vacant</p>
+    <h3>How to Participate</h3>
 
-<h2>How to Participate</h2>
+    <p>Currently IDS meetings are held using PWG face-to-face meetings as needed.</p>
 
-<p>Currently IDS meetings are held using PWG face-to-face meetings as needed.</p>
+    <p>Mailing list: <a href="mailto:ids@pwg.org">ids@pwg.org</a>
+    &middot;
+    <a href="https://www.pwg.org/mailman/listinfo/ids">Subscribe</a></p>
 
-<p>Mailing list: <a href="mailto:ids@pwg.org">ipp@pwg.org</a>
-&middot;
-<a href="https://www.pwg.org/mailman/listinfo/ids">Subscribe</a></p>
+    <p>Archives: <a href="http://ftp.pwg.org/pub/pwg/ids/minutes">Meeting Minutes</a>
+    &middot;
+    <a href="http://www.pwg.org/archives/ids">IDS List Archive</a></p>
+  </div>
+</div>
+<div class="row pwg-panel pwg-alt-0">
+  <div class="col-md-12 col-sm-12">
+    <h2 id="DRAFTS">Working Drafts</h2>
+  </div>
+</div>
+<div class="row pwg-panel pwg-alt-1">
+  <div class="col-md-12 col-sm-12">
+    <h2 id="PUBLISHED">Published Work</h2>
 
-<p>Archives: <a href="http://ftp.pwg.org/pub/pwg/ids/minutes">Meeting Minutes</a>
-&middot;
-<a href="http://www.pwg.org/archives/ids">IDS List Archive</a></p>
+    <h3>Candidate Standards <a class="badge badge-primary badge-pill" href="#" id="candidates" role="button" data-toggle="popover" data-container="body" data-content="A PWG Candidate Standard is a specification that has been approved by the Printer Working Group membership and has been prototyped.">i</a></h3>
 
+    <p><a href="http://ftp.pwg.org/pub/pwg/candidates/cs-idsattributes10-20130401-5110.1.pdf">PWG 5110.1-2013: PWG Hardcopy Device Health Assessment Attributes</a><br>
+    <a href="http://ftp.pwg.org/pub/pwg/candidates/cs-ids-napsoh10-20130401-5110.2.pdf">PWG 5110.2-2013: PWG Hardcopy Device Health Assessment Network Access Protection Protocol Binding</a><br>
+    <a href="http://ftp.pwg.org/pub/pwg/candidates/cs-ids-log10-20130401.5110.3.pdf">PWG 5110.3-2013: Common Log Format</a></p>
 
-<h2>Candidate Standards</h2>
+    <h3>White Papers</h3>
 
-<p><a href="http://ftp.pwg.org/pub/pwg/candidates/cs-idsattributes10-20130401-5110.1.pdf">PWG 5110.1-2013: PWG Hardcopy Device Health Assessment Attributes</a><br>
-<a href="http://ftp.pwg.org/pub/pwg/candidates/cs-ids-napsoh10-20130401-5110.2.pdf">PWG 5110.2-2013: PWG Hardcopy Device Health Assessment Network Access Protection Protocol Binding</a><br>
-<a href="http://ftp.pwg.org/pub/pwg/candidates/cs-ids-log10-20130401.5110.3.pdf">PWG 5110.3-2013: Common Log Format</a></p>
+    <p><a href="http://ftp.pwg.org/pub/pwg/ids/white/tb-ids-hcd-nac-business-case-current.pdf">Business Case for NAC and Hardcopy Devices (whitepaper)</a></p>
+  </div>
+</div>
+<div class="row pwg-panel">
+  <div class="col-md-12 col-sm-12">
+    <h3>Historical Drafts</h3>
 
-<h2>White Papers</h2>
-
-<p><a href="http://ftp.pwg.org/pub/pwg/ids/white/tb-ids-hcd-nac-business-case-current.pdf">Business Case for NAC and Hardcopy Devices (whitepaper)</a>
-</p>
-
-<h3>Historical Drafts</h3>
-
-<p><a href="http://ftp.pwg.org/pub/pwg/ids/wd/wd-ids-model10-current.pdf">Most recent draft IDS Model and Requirements</a><br>
-<a href="http://ftp.pwg.org/pub/pwg/ids/wd/wd-ids-iaa10-current.pdf">Most recent draft IDS Authentication and Authorization</a><br>
-<a href="http://ftp.pwg.org/pub/pwg/ids/wd/wd-ids-tnc10-current.pdf">Most recent draft HCD-TNC binding specification</a><br>
-<a href="http://ftp.pwg.org/pub/pwg/general/presentations/Hardcopy_NAC_Request.pdf">December 2007 BOF Presentation</a></p>
+    <p><a href="http://ftp.pwg.org/pub/pwg/ids/wd/wd-ids-model10-current.pdf">Most recent draft IDS Model and Requirements</a><br>
+    <a href="http://ftp.pwg.org/pub/pwg/ids/wd/wd-ids-iaa10-current.pdf">Most recent draft IDS Authentication and Authorization</a><br>
+    <a href="http://ftp.pwg.org/pub/pwg/ids/wd/wd-ids-tnc10-current.pdf">Most recent draft HCD-TNC binding specification</a><br>
+    <a href="http://ftp.pwg.org/pub/pwg/general/presentations/Hardcopy_NAC_Request.pdf">December 2007 BOF Presentation</a></p>
+  </div>
+</div>
