--- a/ipp/index.html
+++ b/ipp/index.html
@@ -22,6 +22,8 @@ layout: bare
   <div class="col-md-12 col-sm-12">
     <h2 id="ABOUT">About the IPP Workgroup</h2>
 
+    <p>Approved Charter: <a  href="https://ftp.pwg.org/pub/pwg/ipp/charter/ch-ipp-charter-20170615.pdf">View</a></p>
+
     <h3>Officers</h3>
 
     <p>Co-Chairs: <a href="mailto:blueroofmusic@gmail.com">Ira McDonald</a>,
