--- a/cloud/index.html
+++ b/cloud/index.html
@@ -1,19 +1,30 @@
 ---
-title: Cloud Imaging Model
-layout: default
+title: Cloud Imaging Model Workgroup
+layout: bare
 ---
 
-<h2><a name="ACTIVITIES">Current Activities</a></h2>
-<p>The Cloud Imaging Model workgroup developed a standard to support Cloud-based printing and multifunction imaging using the PWG Semantic Model. Further development of the model will continue in the <a href="../sm">Semantic Model workgroup</a> as needed.</p>
+<div class="row pwg-panel pwg-base">
+  <div class="col-md-12 col-sm-12">
+    <h1>Cloud Imaging Model Workgroup</h1>
 
-<h2><a name="PARTICIPATING">Contacting the Workgroup</a></h2>
-<p>Mailing list: <a href="mailto:cloud@pwg.org">cloud@pwg.org</a>&nbsp;&middot;
-<a href="https://www.pwg.org/mailman/listinfo/cloud">Subscribe</a>&nbsp;&middot;
-<a href="http://www.pwg.org/archives/cloud">Archive</a></p>
+    <p>Developed a standard to support Cloud-based printing and multifunction imaging using the PWG Semantic Model.</p>
+  </div>
+</div>
+<div class="row pwg-panel">
+  <div class="col-md-12 col-sm-12">
+    <h2 id="ABOUT">About the Cloud Imaging Model Workgroup</h2>
 
-<h2><a name="MINUTES">Conference Call and Meeting Minutes</a></h2>
-<p class="PWGList"><a href="http://ftp.pwg.org/pub/pwg/cloud/minutes/">Archive of Meeting Minutes</a></p>
+    <h3>Historical Mailing List</h3>
+    <p>Mailing list: <a href="mailto:cloud@pwg.org">cloud@pwg.org</a>&nbsp;&middot;
+    <a href="https://www.pwg.org/mailman/listinfo/cloud">Subscribe</a>&nbsp;&middot;
+    <a href="https://www.pwg.org/archives/cloud">Archive</a></p>
+  </div>
+</div>
+<div class="row pwg-panel pwg-alt-0">
+  <div class="col-md-12 col-sm-12">
+    <h2 id="PUBLISHED">Published Work</h2>
 
-<h2><a name="DOCUMENTS">Documents</a></h2>
-<h3>Candidate Standards</h3>
-<p><a href="http://ftp.pwg.org/pub/pwg/candidates/cs-cloudimagingmodel10-20150619-5109.1.pdf">PWG Candidate Standard 5109.1-2015</a> - Cloud Imaging Requirements and Model (IMAGING)</p>
+    <h3>Candidate Standards</h3>
+    <p><a href="http://ftp.pwg.org/pub/pwg/candidates/cs-cloudimagingmodel10-20150619-5109.1.pdf">PWG Candidate Standard 5109.1-2015</a> - Cloud Imaging Requirements and Model (IMAGING)</p>
+  </div>
+</div>
