--- a/wims/index.html
+++ b/wims/index.html
@@ -1,32 +1,48 @@
 ---
 title: Workgroup for Imaging Management Solutions
-layout: default
+layout: bare
 ---
 
-<h2><a name="ACTIVITIES">Historical Activities</a></h2>
-<p>The inactive Workgroup for Imaging Management Solutions (WIMS) was concerned with the definition of new and recasting of previously defined imaging device and service management elements for mapping into standard managment semantics and protocols. These protocols include, but are not limited to, SNMP, CIM, and Web Services Management. The (active) <a href="../ipp">IPP workgroup</a> provides continuing support for printing-related IETF RFCs including the Printer MIB (<a href="http://datatracker.ietf.org/doc/rfc3805/">RFC 3805</a>), Finisher MIB (<a href="http://datatracker.ietf.org/doc/rfc3806/">RFC 3806</a>) and the Job Monitoring MIB (<a href="http://datatracker.ietf.org/doc/rfc2707/">RFC 2707</a>).</p>
+<div class="row pwg-panel pwg-base">
+  <div class="col-md-12 col-sm-12">
+    <h1>Workgroup for Imaging Management Solutions</h1>
 
-<h2><a name="PARTICIPATING">Contacting the Workgroup</a></h2>
-<p>Mailing list: <a href="mailto:wims@pwg.org">wims@pwg.org</a>&nbsp;·
-  <a href="https://www.pwg.org/mailman/listinfo/wims">Subscribe</a>&nbsp;·
-  <a href="http://www.pwg.org/archives/wims">Archive</a></p>
+    <p>The inactive Workgroup for Imaging Management Solutions (WIMS) was concerned with the definition of new and recasting of previously defined imaging device and service management elements for mapping into standard managment semantics and protocols. These protocols include, but are not limited to, SNMP, CIM, and Web Services Management. The (active) <a href="../ipp">IPP workgroup</a> provides continuing support for printing-related IETF RFCs including the Printer MIB (<a href="https://tools.ietf.org/html/rfc3805">RFC 3805</a>), Finisher MIB (<a href="https://tools.ietf.org/html/rfc3806">RFC 3806</a>) and the Job Monitoring MIB (<a href="https://tools.ietf.org/html/rfc2707">RFC 2707</a>).</p>
+  </div>
+</div>
+<div class="row pwg-panel">
+  <div class="col-md-12 col-sm-12">
+    <h2 id="ABOUT">About the Workgroup for Imaging Management Solutions</h2>
 
-<h2><a name="MINUTES">Conference Call and Meeting Minutes</a></h2>
-<p class="PWGList"><a href="http://ftp.pwg.org/pub/pwg/wims/minutes/">Historical Archive of Minutes</a></p>
+    <h3>Historical Mailing List</h3>
+    <p>Mailing list: <a href="mailto:wims@pwg.org">wims@pwg.org</a>&nbsp;&middot;
+  <a href="https://www.pwg.org/mailman/listinfo/wims">Subscribe</a>&nbsp;&middot;
+  <a href="https://www.pwg.org/archives/wims">Archive</a></p>
+  </div>
+</div>
+<div class="row pwg-panel pwg-alt-0">
+  <div class="col-md-12 col-sm-12">
+    <h2 id="PUBLISHED">Published Work</h2>
 
-<h2><a name="DOCUMENTS">Documents</a></h2>
-<h3>Candidate Standards</h3>
-<p><a href="http://ftp.pwg.org/pub/pwg/candidates/cs-wimscount11-20070427-5106.1.pdf">PWG Candidate Standard 5106.1-2007</a> - The PWG Standardized Imaging System Counters v1.1<br>
-<a href="http://ftp.pwg.org/pub/pwg/candidates/cs-wims10-20060421-5106.2.pdf">PWG Candidate Standard 5106.2-2006</a> - The PWG Web-based Imaging Management Service v1.0<br>
-<a href="http://ftp.pwg.org/pub/pwg/candidates/cs-wimscountmib20-20080318-5106.3.pdf">PWG Candidate Standard 5106.3-2008</a> - PWG Imaging System State and Counter MIB v2.0<br>
-<a href="http://ftp.pwg.org/pub/pwg/candidates/cs-wimspower10-20110214-5106.4.pdf">PWG Candidate Standard 5106.4-2011</a> - PWG Power Management Model for Imaging Systems 1.0<br>
-<a href="http://ftp.pwg.org/pub/pwg/candidates/cs-wimspowermib10-20110214-5106.5.pdf">PWG Candidate Standard 5106.5-2011</a> - PWG Imaging System Power MIB v1.0</p>
+    <h3>Candidate Standards</h3>
+    <p><a href="https://ftp.pwg.org/pub/pwg/candidates/cs-wimscount11-20070427-5106.1.pdf">PWG Candidate Standard 5106.1-2007</a> - The PWG Standardized Imaging System Counters v1.1<br>
+    <a href="https://ftp.pwg.org/pub/pwg/candidates/cs-wims10-20060421-5106.2.pdf">PWG Candidate Standard 5106.2-2006</a> - The PWG Web-based Imaging Management Service v1.0<br>
+    <a href="https://ftp.pwg.org/pub/pwg/candidates/cs-wimscountmib20-20080318-5106.3.pdf">PWG Candidate Standard 5106.3-2008</a> - PWG Imaging System State and Counter MIB v2.0<br>
+    <a href="https://ftp.pwg.org/pub/pwg/candidates/cs-wimspower10-20110214-5106.4.pdf">PWG Candidate Standard 5106.4-2011</a> - PWG Power Management Model for Imaging Systems 1.0<br>
+    <a href="https://ftp.pwg.org/pub/pwg/candidates/cs-wimspowermib10-20110214-5106.5.pdf">PWG Candidate Standard 5106.5-2011</a> - PWG Imaging System Power MIB v1.0</p>
 
-<h3>RFCs</h3>
-<p><a href="http://tools.ietf.org/html/rfc">RFC 2707</a> - Job Monitoring MIB</a><br>
-<a href="http://tools.ietf.org/html/rfc">RFC 3805</a> - Printer MIB v2</a><br>
-<a href="http://tools.ietf.org/html/rfc">RFC 3806</a> - Finisher MIB</a></p>
+    <h3>IETF RFCs</h3>
+    <p><a href="https://tools.ietf.org/html/rfc2707">RFC 2707</a> - Job Monitoring MIB</a><br>
+    <a href="https://tools.ietf.org/html/rfc3805">RFC 3805</a> - Printer MIB v2</a><br>
+    <a href="https://tools.ietf.org/html/rfc3806">RFC 3806</a> - Finisher MIB</a></p>
+  </div>
+</div>
+<div class="row pwg-panel pwg-alt-1">
+  <div class="col-md-12 col-sm-12">
+    <h2 id="REFERENCES">References</h2>
 
-<h2><a name="LINKS">Related Links</a></h2>
-<p><a href="http://www.dmtf.org/standards/">CIM</a>, including Common Information Model (CIM), Web-Based Enterprise Management (WEBM) and Alert Standard Format (ASF)</p>
-<p><a href="https://www.oasis-open.org/committees/mgmtprotocol/">OASIS</a></p>
+    <h3>Related Links</h3>
+    <p><a href="https://www.dmtf.org/standards/">CIM</a>, including Common Information Model (CIM), Web-Based Enterprise Management (WEBM) and Alert Standard Format (ASF)</p>
+    <p><a href="https://www.oasis-open.org/committees/mgmtprotocol/">OASIS</a></p>
+  </div>
+</div>
