Update to current bootstrap 4.3.1.  Add link to main PWG web site.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@ layout: bare
 
 <div class="row pwg-panel pwg-base">
   <div class="col-md-12 col-sm-12">
+    <blockquote style="background: none;"><em>Note:</em> This site is under active development. Please see the official <a href="https://www.pwg.org">PWG web site</a> for authoritative information.</blockquote>
     <h1><img class="pwg-logo-sm hidden-sm" src="/pwg-logos/pwg-medium@2x.png">The Printer Working Group</h1>
     <p class="lead">Making printers and multi-function devices work better with applications and operating systems.</p>
     <ul class="nav nav-pills">
