--- a/printers/index.html
+++ b/printers/index.html
@@ -11,26 +11,32 @@ layout: bare
 <div class="row pwg-panel" style="height: 100%;">
   <div class="col-md-12 col-sm-12">
     <form id="search" onSubmit="event.preventDefault(); update();" style="text-align: center;">Filter:
-    <input type="search" name="q" placeholder="Make, model, etc." size="40" list="qlist" autocomplete="org.pwg.ipp-everywhere" onInput="update();">
+    <input type="search" name="q" placeholder="Make, model, etc." xxsize="40" list="qlist" autocomplete="org.pwg.ipp-everywhere" onInput="update();">
     <datalist id="qlist">
-      <option value="Brother"></option>
-      <option value="Canon"></option>
+<!--      <option value="Brother"></option>
+      <option value="Canon"></option>-->
       <option value="DesignJet"></option>
       <option value="DeskJet"></option>
-      <option value="EPSON"></option>
-      <option value="Fuji Xerox"></option>
+<!--      <option value="EPSON"></option>
+      <option value="Fuji Xerox"></option>-->
       <option value="HP"></option>
-      <option value="Konica Minolta"></option>
+<!--      <option value="Konica Minolta"></option>
       <option value="Kyocera"></option>
       <option value="LaserJet"></option>
-      <option value="Lexmark"></option>
+      <option value="Lexmark"></option>-->
       <option value="OfficeJet"></option>
-      <option value="Oki Data"></option>
+<!--      <option value="Oki Data"></option>-->
       <option value="Photosmart"></option>
-      <option value="Ricoh"></option>
+<!--      <option value="Ricoh"></option>
       <option value="Toshiba"></option>
-      <option value="Xerox"></option>
+      <option value="Xerox"></option>-->
     </datalist>
+    <select name="media" onChange="update();">
+      <option value="">All Sizes</option>
+      <option value="Small">Letter/A4</option>
+      <option value="Medium">Tabloid/A3</option>
+      <option value="Large">C/A2+</option>
+    </select>
     <select name="color" onChange="update();">
       <option value="">Color and B&amp;W</option>
       <option value="0">B&amp;W Only</option>
@@ -53,21 +59,23 @@ layout: bare
     </select>
     </form>
 
-    <table class="pwg-table" summary="IPP Everywhere™ Printers">
-      <caption id="printerCount">??? printers.</caption>
-      <thead>
-        <tr>
-          <th>Model</th>
-          <th>Media</th>
-          <th>Color</th>
-          <th>2-Sided</th>
-          <th>Finishers</th>
-          <th>Encryption</th>
-        </tr>
-      </thead>
-      <tbody id="printers">
-      </tbody>
-    </table>
+    <div class="table-responsive-sm">
+      <table class="pwg-table" summary="IPP Everywhere™ Printers">
+	<caption id="printerCount">??? printers.</caption>
+	<thead>
+	  <tr>
+	    <th>Model</th>
+	    <th>Media</th>
+	    <th>Color</th>
+	    <th>2-Sided</th>
+	    <th>Finishers</th>
+	    <th>Encryption</th>
+	  </tr>
+	</thead>
+	<tbody id="printers">
+	</tbody>
+      </table>
+    </div>
   </div>
 </div>
 
@@ -89,10 +97,11 @@ function update()
 
     var form = document.getElementById("search");
     var q = form.elements[0].value.toLowerCase();
-    var color = form.elements[1].value;
-    var duplex = form.elements[2].value;
-    var finishers = form.elements[3].value;
-    var ipps = form.elements[4].value;
+    var media = form.elements[1].value;
+    var color = form.elements[2].value;
+    var duplex = form.elements[3].value;
+    var finishers = form.elements[4].value;
+    var ipps = form.elements[5].value;
 
     console.log("Query string: " + q);
     console.log("Color: " + color);
@@ -104,33 +113,42 @@ function update()
 
       if (q != "" && printer["model"].toLowerCase().indexOf(q) < 0)
         continue;
-      if (color != "" && color != printer["color_supported"])
+      if (media != "" && media != printer["media"])
         continue;
-      if (duplex != "" && duplex != printer["duplex_supported"])
+      if (color != "" && color != printer["color"])
         continue;
-      if (finishers != "" && finishers != printer["finishings_supported"])
+      if (duplex != "" && duplex != printer["duplex"])
         continue;
-      if (ipps != "" && ipps != printer["ipps_supported"])
+      if (finishers != "" && finishers != printer["finishings"])
+        continue;
+      if (ipps != "" && ipps != printer["ipps"])
         continue;
 
       r[j++] = '<tr><td><a href="';
       r[j++] = printer["url"];
       r[j++] = '">';
       r[j++] = printer["model"];
+      if (printer["version"] != "1.0")
+      {
+        r[j++] = '</a>&nbsp;<span class="badge badge-secondary">';
+        r[j++] = printer["version"];
+        r[j++] = '</span></td><td>';
+      }
+      else
+        r[j++] = '</a></td><td>';
+      r[j++] = printer["media"];
       r[j++] = '</td><td>';
-      r[j++] = printer["media_format"];
+      r[j++] = printer["color"] != 0 ? 'YES' : 'NO';
       r[j++] = '</td><td>';
-      r[j++] = printer["color_supported"] != 0 ? 'YES' : 'NO';
+      r[j++] = printer["duplex"] != 0 ? 'YES' : 'NO';
       r[j++] = '</td><td>';
-      r[j++] = printer["duplex_supported"] != 0 ? 'YES' : 'NO';
+      r[j++] = printer["finishings"] != 0 ? 'YES -' : 'NO';
+      r[j++] = printer["fin_fold"] != 0 ? ' Fold' : '';
+      r[j++] = printer["fin_punch"] != 0 ? ' Punch' : '';
+      r[j++] = printer["fin_staple"] != 0 ? ' Staple' : '';
+      r[j++] = printer["fin_trim"] != 0 ? ' Cut' : '';
       r[j++] = '</td><td>';
-      r[j++] = printer["finishings_supported"] != 0 ? 'YES -' : 'NO';
-      r[j++] = printer["finishings_fold"] != 0 ? ' Folder' : '';
-      r[j++] = printer["finishings_punch"] != 0 ? ' Puncher' : '';
-      r[j++] = printer["finishings_staple"] != 0 ? ' Stapler' : '';
-      r[j++] = printer["finishings_trim"] != 0 ? ' Cutter' : '';
-      r[j++] = '</td><td>';
-      r[j++] = printer["ipps_supported"] != 0 ? 'YES' : 'NO';
+      r[j++] = printer["ipps"] != 0 ? 'YES' : 'NO';
       r[j++] = '</td></tr>';
       count ++;
     }
