Update IANA registry and IPP workgroup page.

--- a/ipp/index.html
+++ b/ipp/index.html
@@ -93,15 +93,25 @@ layout: bare
     <h3>Standards-Track Drafts</h3>
 
     <p>IPP 3D Printing Extensions v1.1:
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ipp3d11-20190201.pdf">Clean</a>
-    &middot;
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ipp3d11-20190201-rev.pdf">Redlined</a>
-    (Stable Draft - Last Updated February 1, 2019, PWG Call for Objections until March 29, 2019)</p>
+    <a href="https://ftp.pwg.org/pub/pwg/candidates/cs-ipp3d11-20190329-5100.21.pdf">Approved</a>
+    (Approved March 29, 2019)</p>
 
     <p>IPP Document Object v1.1:
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippdocobject11-20190318.pdf">Clean</a>
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippdocobject11-20190418.pdf">Clean</a>
     &middot;
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippdocobject11-20190318-rev.pdf">Redlined</a> (Stable Draft - Last Updated March 18, 2019)</p>
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippdocobject11-20190418-rev.pdf">Redlined</a> (Stable Draft - Last Updated April 18, 2019)</p>
+
+    <p>IPP Encrypted Jobs and Documents v1.0 (TRUSTNOONE):
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ipptrustnoone10-20190418.pdf">Clean</a>
+    &middot;
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ipptrustnoone10-20190418-rev.pdf">Redlined</a>
+    (Interim Draft - Last Updated April 18, 2019)</p>
+
+    <p>IPP Enterprise Printing Extensions v2.0 (EPE):
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippepe-20190327.pdf">Clean</a>
+    <!-- &middot;
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippepe-20190327-rev.pdf">Redlined</a> -->
+    (Initial Draft - Last Updated March 27, 2019)</p>
 
     <p>IPP Everywhere™ v1.1:
     <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippeve11-20190128.pdf">Clean</a>
@@ -114,13 +124,9 @@ layout: bare
     &middot;
     <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippeveselfcert11-20180704-rev.pdf">Redlined</a> (Prototype Draft - Last Updated July 4, 2018)</p>
 
-    <p>IPP Job Extensions v2.0 (JOBEXT): <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippjobext20-20190315.pdf">Clean</a>
+    <p>IPP Job Extensions v2.0 (JOBEXT): <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippjobext20-20190418.pdf">Clean</a>
     &middot;
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippjobext20-20190315-rev.pdf">Redlined</a> (Prototype Draft - Last Updated March 15, 2019)</p>
-
-    <p>IPP Job and Printer Extensions - Set 2 v2.0 (JPS2): <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippjobprinterext2v20-20190214.pdf">Clean</a>
-    <!-- &middot;
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippjobprinterext20-20190214-rev.pdf">Redlined</a>--> (Interim Draft - Last Updated February 14, 2019)</p>
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippjobext20-20190418-rev.pdf">Redlined</a> (Stable Draft - Last Updated April 18, 2019)</p>
 
     <p>IPP System Service (SYSTEM): <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippsystem10-20190130.pdf">Clean</a>
     &middot;
@@ -128,23 +134,19 @@ layout: bare
 
     <p>MFD Alerts v1.1: <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-pwgmfdalerts11-20190317.pdf">Clean</a>
     &middot;
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-pwgmfdalerts11-20190317-rev.pdf">Redlined</a> (Stable Draft - Last Updated March 17, 2019, PWG Call for Objections until April 12, 2019)></p>
-
-    <h3>Registration Drafts</h3>
-
-    <p>IPP Encrypted Jobs and Documents v1.0 (TRUSTNOONE):
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ipptrustnoone10-20190131.pdf">Clean</a>
-    &middot;
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ipptrustnoone10-20190131-rev.pdf">Redlined</a>
-    (Interim Draft - Last Updated January 31, 2019)</p>
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-pwgmfdalerts11-20190317-rev.pdf">Redlined</a> (Stable Draft - Last Updated March 17, 2019, PWG Call for Objections concluded April 12, 2019)></p>
 
     <h3>White Paper/Tech Brief/Best Practice Drafts</h3>
 
     <p>IPP Authentication Methods:
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippauth-20190304.pdf">Clean</a>
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippauth-20190328.pdf">Clean</a>
     &middot;
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippauth-20190304-rev.pdf">Redlined</a>
-    (LCRC Draft - Last Updated March 4, 2019, PWG WG Last Call Completed Successfully)</p>
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippauth-20190328-rev.pdf">Redlined</a>
+    (Stable Draft - Last Updated March 28, 2019, PWG WG Last Call Ends May 11, 2019)</p>
+
+    <p>Job Accounting with IPP:
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippaccounting10-20190418.pdf">Clean</a>
+    (Initial Draft - Last Updated April 18, 2019)</p>
 
     <p>PWG Safe G-Code Subset for 3D Printing:
     <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-pwgsafegcode10-20190318.pdf">Clean</a>
@@ -152,7 +154,7 @@ layout: bare
     <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-pwgsafegcode10-20190318-rev.pdf">Redlined</a>
     &middot;
     <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/lcrc-pwgsafegcode10.txt">LCRC Comments</a>
-    (LCRC Draft - Last Updated March 18, 2019, PWG WG Last Call Completed Successfully)</p>
+    (LCRC Draft - Last Updated March 18, 2019, PWG WG Formal Vote ends May 19, 2019)</p>
   </div>
 </div>
 <div class="row pwg-panel pwg-alt-2">
