--- a/ipp/index.html
+++ b/ipp/index.html
@@ -99,7 +99,7 @@ layout: bare
     <p>IPP Document Object v1.1:
     <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippdocobject11-20190418.pdf">Clean</a>
     &middot;
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippdocobject11-20190418-rev.pdf">Redlined</a> (Stable Draft - Last Updated April 18, 2019)</p>
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippdocobject11-20190418-rev.pdf">Redlined</a> (Stable Draft - Last Updated April 18, 2019 - PWG Call for Objections Ends May 21, 2019)</p>
 
     <p>IPP Encrypted Jobs and Documents v1.0 (TRUSTNOONE):
     <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ipptrustnoone10-20190418.pdf">Clean</a>
@@ -132,9 +132,8 @@ layout: bare
     &middot;
     <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippsystem10-20190130-rev.pdf">Redlined</a> (Prototype Draft - Last Updated January 30, 2019)</p>
 
-    <p>MFD Alerts v1.1: <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-pwgmfdalerts11-20190317.pdf">Clean</a>
-    &middot;
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-pwgmfdalerts11-20190317-rev.pdf">Redlined</a> (Stable Draft - Last Updated March 17, 2019, PWG Call for Objections concluded April 12, 2019)></p>
+    <p>MFD Alerts v1.1: <a href="https://ftp.pwg.org/pub/pwg/candidates/cs-pwgmfdalerts11-20190412-5107.3.pdf">Clean</a>
+    (Approved April 12, 2019)></p>
 
     <h3>White Paper/Tech Brief/Best Practice Drafts</h3>
 
@@ -143,6 +142,16 @@ layout: bare
     &middot;
     <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippauth-20190328-rev.pdf">Redlined</a>
     (Stable Draft - Last Updated March 28, 2019, PWG WG Last Call Ends May 11, 2019)</p>
+
+    <p>IPP Message Catalog Tooltips and Help Extensions (TOOLTIP):
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ipptooltip-20190419.pdf">Clean</a>
+    (Initial Draft - Last Updated April 19, 2019)</p>
+
+    <p>IPP Print Quality Customization Extensions (CUSTOMPQI):
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/white-hp-ipp-custompqi-20190423.pdf">Clean</a>
+    &middot;
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/white-hp-ipp-custompqi-20190423-rev.pdf">Redlined</a>
+    (Interim Draft - Last Updated April 23, 2019)</p>
 
     <p>Job Accounting with IPP:
     <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippaccounting10-20190418.pdf">Clean</a>
@@ -154,7 +163,7 @@ layout: bare
     <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-pwgsafegcode10-20190318-rev.pdf">Redlined</a>
     &middot;
     <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/lcrc-pwgsafegcode10.txt">LCRC Comments</a>
-    (LCRC Draft - Last Updated March 18, 2019, PWG WG Formal Vote ends May 19, 2019)</p>
+    (LCRC Draft - Last Updated March 18, 2019, PWG WG Formal Vote ends May 13, 2019)</p>
   </div>
 </div>
 <div class="row pwg-panel pwg-alt-2">
