MFD Alerts v1.1 and IPP 3D v1.1

--- a/standards.html
+++ b/standards.html
@@ -114,7 +114,7 @@ layout: bare
     <p>This document defines IPP Everywhere Printer self-certification test procedures and the process required for PWG Members to register the test results on the PWG web site in order to use the &ldquo;IPP Everywhere&rdquo; logo.</p>
 
 
-    <h3>PWG 5100.21-2017: IPP 3D Printing Extensions v1.0 (3D) <a class="badge badge-primary" href="https://ftp.pwg.org/pub/pwg/candidates/cs-ipp3d10-20170210-5100.21.pdf">PDF</a></h3>
+    <h3>PWG 5100.21-2019: IPP 3D Printing Extensions v1.1 (3D) <a class="badge badge-primary" href="https://ftp.pwg.org/pub/pwg/candidates/cs-ipp3d11-20190329-5100.21.pdf">PDF</a></h3>
     <p>This specification defines an extension to the Internet Printing Protocol and IPP Everywhere that supports printing of physical objects by Additive Manufacturing devices such as 3D printers.</p>
   </div>
 </div>
@@ -226,8 +226,8 @@ layout: bare
     <p>defined in the PWG Printer Port Monitor MIB [PWG5107.1].</p>
 
 
-    <h3>PWG 5107.3-2012: Printer MIB and IPP MFD Alerts <a class="badge badge-primary" href="https://ftp.pwg.org/pub/pwg/candidates/cs-pmpmfdalerts10-20120629-5107.3.pdf">PDF</a></h3>
-    <p>This document defines an update to the IANA-PRINTER-MIB (originally published in RFC 3805) to provide support for SNMP alerts in a multifunction device (MFD) and an equivalent update to IPP â€œprinter-state-reasonsâ€ (RFC 2911) and IPP â€œprinter-alertâ€ (PWG 5100.9). An MFD is typically based on a printer with added scan- and fax-specific components in order to support print, copy, scan, and facsimile (fax) services. This document defines an update to the IANA-PRINTER-MIB to provide support for new MFD components and component-specific alerts and analogous Printer extension alerts for the existing Input, Output, and MediaPath components.</p>
+    <h3>PWG 5107.3-2019: PWG MFD Alerts v1.1 (MFD Alerts) <a class="badge badge-primary" href="https://ftp.pwg.org/pub/pwg/candidates/cs-pwgmfdalerts11-20190412-5107.3.pdf">PDF</a></h3>
+    <p>This document defines an update to the IANA-PRINTER-MIB (originally published in RFC 3805) to provide support for SNMP alerts in a multifunction device (MFD) and an equivalent update to IPP “printer-state-reasons” [STD92] and IPP “printer-alert” [PWG5100.9].</p>
   </div>
 </div>
 <div class="row pwg-panel pwg-alt-2">
