--- a/ipp/index.html
+++ b/ipp/index.html
@@ -92,10 +92,6 @@ layout: bare
 
     <h3>Standards-Track Drafts</h3>
 
-    <p>IPP 3D Printing Extensions v1.1:
-    <a href="https://ftp.pwg.org/pub/pwg/candidates/cs-ipp3d11-20190329-5100.21.pdf">Approved</a>
-    (Approved March 29, 2019)</p>
-
     <p>IPP Document Object v1.1:
     <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippdocobject11-20190418.pdf">Clean</a>
     &middot;
@@ -131,9 +127,6 @@ layout: bare
     <p>IPP System Service (SYSTEM): <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippsystem10-20190130.pdf">Clean</a>
     &middot;
     <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippsystem10-20190130-rev.pdf">Redlined</a> (Prototype Draft - Last Updated January 30, 2019)</p>
-
-    <p>MFD Alerts v1.1: <a href="https://ftp.pwg.org/pub/pwg/candidates/cs-pwgmfdalerts11-20190412-5107.3.pdf">Clean</a>
-    (Approved April 12, 2019)></p>
 
     <h3>White Paper/Tech Brief/Best Practice Drafts</h3>
 
@@ -205,13 +198,15 @@ layout: bare
     <a href="https://ftp.pwg.org/pub/pwg/candidates/cs-ippig20-20150821-5100.19.pdf">PWG 5100.19-2015:</a> IPP Implementor's Guide v2.0 (IG)<br>
     <a href="https://ftp.pwg.org/pub/pwg/candidates/cs-ippeveselfcert10-20160219-5100.20.pdf">PWG 5100.20-2016:</a> IPP Everywhere Printer Self-Certification Manual v1.0 (SELFCERT)<br>
     &nbsp;&nbsp;&nbsp;&nbsp;<a href="everywhere.html">Tools, etc.</a><br>
-    <a href="https://ftp.pwg.org/pub/pwg/candidates/cs-ipp3d10-20170210-5100.21.pdf">PWG 5100.21-2017:</a> IPP 3D Printing Extensions v1.0 (3D)</p>
+    <a href="https://ftp.pwg.org/pub/pwg/candidates/cs-ipp3d11-20190329-5100.21.pdf">PWG 5100.21-2019:</a> IPP 3D Printing Extensions v1.1 (3D)</p>
 
     <p><a href="https://ftp.pwg.org/pub/pwg/candidates/cs-pwgmsn20-20130328-5101.1.pdf">PWG 5101.1-2013</a>: PWG Media Standardized Names 2.0<br>
     &nbsp;&nbsp;&nbsp;&nbsp;<a href="https://ftp.pwg.org/pub/pwg/informational/pwg5101.1-media-name-abnf.txt">Collected ABNF</a></p>
 
-    <p><a href="https://ftp.pwg.org/pub/pwg/candidates/cs-ippraster10-20120420-5102.4.pdf">PWG 5102.4-2012</a>: PWG Raster Format</a><br>
+    <p><a href="https://ftp.pwg.org/pub/pwg/candidates/cs-ippraster10-20120420-5102.4.pdf">PWG 5102.4-2012</a>: PWG Raster Format<br>
     &nbsp;&nbsp;&nbsp;&nbsp;<a href="https://ftp.pwg.org/pub/pwg/ipp/examples">Sample PWG Raster Data</a></p>
+
+    <p><a href="https://ftp.pwg.org/pub/pwg/candidates/cs-pwgmfdalerts11-20190412-5107.3.pdf">PWG 5107.3-2019</a>: PWG MFD Alerts v1.1 (MFD Alerts)</p>
 
 
     <h3>IETF RFCs</h3>
