--- a/3d/index.html
+++ b/3d/index.html
@@ -9,7 +9,7 @@ layout: bare
     <p>The Printer Working Group has developed an extension to the <a href="../ipp">Internet Printing Protocol</a> for 3D Printing. The extension leverages our existing network protocol and Job Ticket formats and existing high-level 3D file formats to describe the objects to print. The IPP workgroup has also developed a version of the PWG Semantic Model Print Job Ticket schema for 3D printing to support data exchange and embedding within common 3D file formats such as 3MF and 3D PDF documents so that user intent is preserved regardless of the transport or workflow used.</p>
     <p>We welcome participation from all interested parties in the continued prototyping and development of these specifications.</p>
     <ul class="nav nav-pills">
-      <li class="nav-item" role="presentation"><a class="nav-link" href="http://ftp.pwg.org/pub/pwg/candidates/cs-ipp3d10-20170210-5100.21.pdf" target="_blank">IPP 3D Specification</a></li>
+      <li class="nav-item" role="presentation"><a class="nav-link" href="http://ftp.pwg.org/pub/pwg/candidates/cs-ipp3d11-20190329-5100.21.pdf" target="_blank">IPP 3D v1.1 Specification</a></li>
       <li class="nav-item" role="presentation"><a class="nav-link" href="http://www.pwg.org/mailman/listinfo/3d-printing">IPP 3D Mailing List</a></li>
       <li class="nav-item" role="presentation"><a class="nav-link" href="http://ftp.pwg.org/pub/pwg/informational/bp-smpjt3d10-20170818.pdf" target="_blank">PWG 3D Print Job Ticket</a></li>
     </ul>
@@ -34,7 +34,7 @@ layout: bare
     <p>Client devices query an IPP 3D printer for the available materials and capabilities (heated build platform, multiple material support, etc.) and then send 3D files to the printer, specifying the material(s) and other options to use for the print job. The client can then monitor the progress of the job and the printer status, including any available camera video of the build platform. All slicing happens on the printer.</p>
     <p class="hidden-xs">&nbsp;</p>
     <ul class="nav nav-pills">
-      <li class="nav-item" role="presentation"><a class="nav-link" href="http://ftp.pwg.org/pub/pwg/candidates/cs-ipp3d10-20170210-5100.21.pdf">IPP 3D Specification</a></li>
+      <li class="nav-item" role="presentation"><a class="nav-link" href="http://ftp.pwg.org/pub/pwg/candidates/cs-ipp3d11-20190329-5100.21.pdf">IPP 3D v1.1 Specification</a></li>
       <li class="nav-item" role="presentation"><a class="nav-link" href="http://www.pwg.org/mailman/listinfo/3d-printing">IPP 3D Mailing List</a></li>
       <li class="nav-item" role="presentation"><a class="nav-link" href="http://github.com/istopwg/ippsample">IPP Sample Code</a></li>
     </ul>
@@ -57,7 +57,7 @@ layout: bare
   <div class="col-md-12 col-sm-12">
     <h2>Resources</h2>
     <ul>
-      <li role="presentation"><a href="http://ftp.pwg.org/pub/pwg/candidates/cs-ipp3d10-20170210-5100.21.pdf">IPP 3D Specification</a></li>
+      <li role="presentation"><a href="http://ftp.pwg.org/pub/pwg/candidates/cs-ipp3d11-20190329-5100.21.pdf">IPP 3D v1.1 Specification</a></li>
       <li><a href="http://www.pwg.org/mailman/listinfo/3d-printing">IPP 3D Printing Mailing List</a></li>
       <li><a href="http://github.com/istopwg/ippsample">IPP Sample Code</a></li>
       <li><a href="PWG-IPP-and-3D-Printing-Infographic.pdf">IPP 3D Infographic (One Page Version)</a></li>
