--- a/ipp/index.html
+++ b/ipp/index.html
@@ -120,14 +120,14 @@ layout: bare
     &middot;
     <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippeveselfcert11-20180704-rev.pdf">Redlined</a> (Prototype Draft - Last Updated July 4, 2018)</p>
 
-    <p>IPP Job Extensions v2.0 (JOBEXT): <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippjobext20-20190418.pdf">Clean</a>
+    <p>IPP Job Extensions v2.0 (JOBEXT): <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippjobext20-20190510.pdf">Clean</a>
     &middot;
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippjobext20-20190418-rev.pdf">Redlined</a> (Stable Draft - Last Updated April 18, 2019)</p>
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippjobext20-20190510-rev.pdf">Redlined</a> (Stable Draft - Last Updated May 10, 2019)</p>
 
-    <p>IPP Production Printing Extensions v1.1 (PPX): <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippppx11-20190501.pdf">Clean</a>
+    <p>IPP Production Printing Extensions v2.0 (PPX): <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippppx20-20190514.pdf">Clean</a>
     &middot;
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippppx11-20190501-rev.pdf">Redlined</a>
-    (Initial Draft - Last Updated May 1, 2019)</p>
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippppx11-20190514-rev.pdf">Redlined</a>
+    (Interim Draft - Last Updated May 14, 2019)</p>
 
     <p>IPP System Service (SYSTEM): <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippsystem10-20190130.pdf">Clean</a>
     &middot;
