--- a/standards.html
+++ b/standards.html
@@ -38,8 +38,8 @@ layout: bare
     <p>This extension also defines the &ldquo;current-page-order&rdquo; Job Description attribute, the &ldquo;user-defined-values-supported&rdquo; and &ldquo;max-stitching-locations-supported&rdquo; Printer Description attributes, and the &lsquo;resources-are-not-supported&rsquo; value for the &ldquo;job-state-reasons&rdquo; Job Description attribute. Some additional &ldquo;media&rdquo; keyword values are defined for use with the &ldquo;media&rdquo; and &ldquo;media-col&rdquo; Job Template attributes.</p>
 
 
-    <h3>PWG 5100.5-2003: IPP Document Object <a class="badge badge-primary" href="https://ftp.pwg.org/pub/pwg/candidates/cs-ippdocobject10-20031031-5100.5.pdf">PDF</a></h3>
-    <p>This IPP specification extends the IPP Protocol, Model and Semantics [rfc2910], [rfc2911] object model by defining a Document object. The [rfc2911] Job object is extended to contain one or more Document objects that are passive objects operated on by the Job. Multi-Document Jobs exist in IPP [rfc2911] but are not objects in their own right. This specification elevates the Document to an IPP object thus giving access to a document&lsquo;s metadata within a Job. A Document object allows template attributes to be applied at both the Job and Document level. This enables document overrides of Job Template attributes.</p>
+    <h3>PWG 5100.5-2019: IPP Document Object v1.1 <a class="badge badge-primary" href="https://ftp.pwg.org/pub/pwg/candidates/cs-ippdocobject11-20190521-5100.5.pdf">PDF</a></h3>
+    <p>This specification defines the IPP Document object and its associated attributes, values, group, and operations.</p>
 
 
     <h3>PWG 5100.6-2003: IPP Page Overrides <a class="badge badge-primary" href="https://ftp.pwg.org/pub/pwg/candidates/cs-ipppageoverride10-20031031-5100.6.pdf">PDF</a></h3>
