Add PWG Safe G-Code

--- a/informational.html
+++ b/informational.html
@@ -17,6 +17,9 @@ layout: bare
   <div class="col-md-12 col-sm-12">
     <h2 id="BESTPRACTICES">Best Practices</h2>
 
+    <h3>PWG Safe G-Code Subset for 3D Printing v1.0 <a class="badge badge-primary" href="https://ftp.pwg.org/pub/pwg/informational/bp-pwgsafegcode10-20190604.pdf">PDF</a></h3>
+    <p>This document defines a "safe" subset of G-code for use in 3D printing with IPP along with the capabilities and parameters needed to allow a client to generate G-code compatible with the printer.</p>
+
     <h3>PWG Mapping CIP4 JDF to PWG Job Ticket v1.0 (JDFMAP) <a class="badge badge-primary" href="https://ftp.pwg.org/pub/pwg/informational/bp-smjdfmap10-20170828.pdf">PDF</a></h3>
     <p>For interoperability between job ticket-based printing systems, this Best Practices document defines a recommended mapping from XML objects and attributes in the CIP4 Job Definition Format [CIP4JDF] to XML elements in the PWG Print Job Ticket and Associated Capabilities [PWG5108.7].</p>
 
