Add link to registration policy.

--- a/ipp/index.html
+++ b/ipp/index.html
@@ -61,6 +61,8 @@ layout: bare
   <div class="col-md-12 col-sm-12">
     <h2 id="REG">Registries</h2>
 
+    <p>Registration Policy: <a href="https://ftp.pwg.org/pub/pwg/general/process/ipp-registry-policy.txt">Plain Text</a></p>
+
     <p>Pending PWG IPP Registrations: <a href="ipp-registrations.xml">XML</a></p>
 
     <p>IANA IPP Registrations: <a href="http://www.iana.org/assignments/ipp-registrations/ipp-registrations.xml">XML</a>
