--- a/3d/index.html
+++ b/3d/index.html
@@ -50,7 +50,7 @@ layout: bare
     <ul class="nav nav-pills">
       <li class="nav-item" role="presentation"><a class="nav-link" target="_blank" href="http://www.3mf.io/">3MF Web Site</a></li>
       <li class="nav-item" role="presentation"><a class="nav-link" target="_blank" href="http://www.adobe.com/content/dam/Adobe/en/devnet/acrobat/pdfs/PDF32000_2008.pdf">PDF 1.7 (ISO 32000-1) Specification</a></li>
-      <li class="nav-item" role="presentation"><a href="https://ftp.pwg.org/pub/pwg/informational/bp-pwgsafegcode10-20190604.pdf">PWG Safe G-Code Subset for 3D Printing v1.0</a></li>
+      <li class="nav-item" role="presentation"><a class="nav-link" target="_blank" href="https://ftp.pwg.org/pub/pwg/informational/bp-pwgsafegcode10-20190604.pdf">PWG Safe G-Code Subset for 3D Printing v1.0</a></li>
       <li class="nav-item" role="presentation"><a class="nav-link" target="_blank" href="http://www.ecma-international.org/publications/files/ECMA-ST/ECMA-363%204th%20Edition.pdf">Universal 3D (U3D, ECMA-363) Specification</a></li>
     </ul>
   </div>
