--- a/ipp/index.html
+++ b/ipp/index.html
@@ -107,26 +107,20 @@ layout: bare
     (Interim Draft - Last Updated June 14, 2019)</p>
 
     <p>IPP Everywhere™ v1.1:
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippeve11-20190627.pdf">Clean</a>
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippeve11-20190827.pdf">Clean</a>
     &middot;
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippeve11-20190627-rev.pdf">Redlined</a>
-    (Stable Draft - Last Updated June 27, 2019)</p>
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippeve11-20190827-rev.pdf">Redlined</a>
+    (Stable Draft - Last Updated August 27, 2019)</p>
 
     <p>IPP Everywhere™ Printer Self-Certification Manual v1.1:
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippeveselfcert11-20180704.pdf">Clean</a>
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippeveselfcert11-20190827.pdf">Clean</a>
     &middot;
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippeveselfcert11-20180704-rev.pdf">Redlined</a> (Prototype Draft - Last Updated July 4, 2018)</p>
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippeveselfcert11-20190827-rev.pdf">Redlined</a> (Prototype Draft - Last Updated August 27, 2019)</p>
 
     <p>IPP Job and Printer Extensions - Set 3 v1.1 (JPS3): <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippjobprinterext3v11-20190724.pdf">Clean</a>
     &middot;
     <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippjobprinterext3v11-20190724-rev.pdf">Redlined</a>
     (Interim Draft - Last Updated July 24, 2019)</p>
-
-    <p>IPP Job Extensions v2.0 (JOBEXT): <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippjobext20-20190718.pdf">Clean</a>
-    &middot;
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippjobext20-20190718-rev.pdf">Redlined</a>
-    &middot;
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/lcrc-ippjobext20.txt">Comments</a> (Stable Draft - Last Updated July 18, 2019 - PWG Formal Vote Ends August 16, 2019)</p>
 
     <p>IPP Production Printing Extensions v2.0 (PPX): <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippppx20-20190626.pdf">Clean</a>
     &middot;
@@ -138,12 +132,6 @@ layout: bare
     <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippsystem10-20190815-rev.pdf">Redlined</a> (Stable Draft - Last Updated August 15, 2019 - PWG Last Call until September 13, 2019)</p>
 
     <h3>White Paper/Tech Brief/Best Practice Drafts</h3>
-
-    <p>IPP Authentication Methods:
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippauth-20190702.pdf">Clean</a>
-    &middot;
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippauth-20190702-rev.pdf">Redlined</a>
-    (Stable Draft - Last Updated July 2, 2019 - PWG Formal Vote Ends August 16, 2019)</p>
 
     <p>Job Accounting with IPP:
     <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippaccounting10-20190418.pdf">Clean</a>
@@ -174,7 +162,7 @@ layout: bare
     <a href="https://ftp.pwg.org/pub/pwg/candidates/cs-ippprodprint10-20010212-5100.3.pdf">PWG 5100.3-2001</a>: Production Printing Attributes - Set1<br>
     <a href="https://ftp.pwg.org/pub/pwg/candidates/cs-ippdocobject11-20190521-5100.5.pdf">PWG 5100.5-2019</a>: IPP Document Object v1.1<br>
     <a href="https://ftp.pwg.org/pub/pwg/candidates/cs-ipppageoverride10-20031031-5100.6.pdf">PWG 5100.6-2003</a>: IPP Page Overrides<br>
-    <a href="https://ftp.pwg.org/pub/pwg/candidates/cs-ippjobext10-20031031-5100.7.pdf">PWG 5100.7-2003</a>: IPP Job Extensions<br>
+    <a href="https://ftp.pwg.org/pub/pwg/candidates/cs-ippjobext20-20190816-5100.7.pdf">PWG 5100.7-2019</a>: IPP Job Extensions v2.0 (JOBEXT)<br>
     <a href="https://ftp.pwg.org/pub/pwg/candidates/cs-ippactuals10-20030313-5100.8.pdf">PWG 5100.8-2003</a>: IPP "-actual" attributes<br>
     <a href="https://ftp.pwg.org/pub/pwg/candidates/cs-ippstate10-20090731-5100.9.pdf">PWG 5100.9-2009:</a> IPP Printer State Extensions<br>
     &nbsp;&nbsp;&nbsp;&nbsp;<a href="https://ftp.pwg.org/pub/pwg/informational/pwg5100.9-abnf.txt">Collected ABNF</a><br>
@@ -248,6 +236,8 @@ layout: bare
     <p><a href="https://ftp.pwg.org/pub/pwg/informational/bp-smjdfmap10-20170828.pdf">Mapping CIP4 JDF to PWG Job Ticket v1.0 (JDFMAP)</a> (August 28, 2017)</p>
 
     <p><a href="https://ftp.pwg.org/pub/pwg/ipp/whitepaper/bp-ippmptray10-20180124.pdf">Supporting Multi-Purpose Trays</a> (January 24, 2018)</p>
+
+    <p><a href="https://ftp.pwg.org/pub/pwg/informational/bp-ippauth10-20190816-5199.10.pdf">PWG 5199-2019: IPP Authentication Methods v1.0</a></p>
 
     <!-- <h3>White Papers</h3> -->
   </div>
