Update IPP Auth

--- a/informational.html
+++ b/informational.html
@@ -17,6 +17,9 @@ layout: bare
   <div class="col-md-12 col-sm-12">
     <h2 id="BESTPRACTICES">Best Practices</h2>
 
+    <h3>PWG 5199.10-2019: IPP Authentication Methods v1.0 <a class="badge badge-primary" href="https://ftp.pwg.org/pub/pwg/informational/bp-ippauth10-20190816-5199.10.pdf">PDF</a></h3>
+    <p>This Best Practice document provides implementation guidance on how to best integrate various authentication mechanisms used over IPP's HTTP and HTTPS transports into IPP protocol exchanges when printer access or print feature policy requires authorization.</p>
+
     <h3>PWG Safe G-Code Subset for 3D Printing v1.0 <a class="badge badge-primary" href="https://ftp.pwg.org/pub/pwg/informational/bp-pwgsafegcode10-20190604.pdf">PDF</a></h3>
     <p>This document defines a "safe" subset of G-code for use in 3D printing with IPP along with the capabilities and parameters needed to allow a client to generate G-code compatible with the printer.</p>
 
