--- a/ipp/index.html
+++ b/ipp/index.html
@@ -127,9 +127,11 @@ layout: bare
     <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippppx11-20190923-rev.pdf">Redlined</a>
     (Prototype Draft - Last Updated September 23, 2019)</p>
 
-    <p>IPP System Service (SYSTEM): <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippsystem10-20190815.pdf">Clean</a>
+    <p>IPP System Service (SYSTEM): <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippsystem10-20190927.pdf">Clean</a>
     &middot;
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippsystem10-20190815-rev.pdf">Redlined</a> (Stable Draft - Last Updated August 15, 2019 - PWG Last Call until September 13, 2019)</p>
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippsystem10-20190927-rev.pdf">Redlined</a>
+    &middot;
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/lcrc-ippsystem10.txt">Last Call Comments</a> (LCRC Draft - Last Updated September 27, 2019)</p>
 
     <h3>White Paper/Tech Brief/Best Practice Drafts</h3>
 
