Fix title of SYSTEM

--- a/ipp/index.html
+++ b/ipp/index.html
@@ -127,7 +127,7 @@ layout: bare
     <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippppx11-20190923-rev.pdf">Redlined</a>
     (Prototype Draft - Last Updated September 23, 2019)</p>
 
-    <p>IPP System Service (SYSTEM): <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippsystem10-20191022.pdf">Clean</a>
+    <p>IPP System Service v1.0 (SYSTEM): <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippsystem10-20191022.pdf">Clean</a>
     &middot;
     <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippsystem10-20191022-rev.pdf">Redlined</a>
     &middot;
