--- a/standards.html
+++ b/standards.html
@@ -50,8 +50,8 @@ layout: bare
     <p>This specification obsoletes 5100.4-2001, “Override Attributes for Documents and Pages”.</p>
 
 
-    <h3>PWG 5100.7-2003: IPP Job Extensions <a class="badge badge-primary" href="https://ftp.pwg.org/pub/pwg/candidates/cs-ippjobext10-20031031-5100.7.pdf">PDF</a></h3>
-    <p>This IPP specification extends the Job semantics of the IPP Model and Semantics [rfc2911] object model. This specification defines some new Operation attributes for use in Job Creation and Document Creation operations. The Printer copies these Operation attributes to the corresponding Job Description attributes, which the clients may query. The Document Creation Operation attributes describe the Document Content and permit the Printer to reject requests that it cannot process correctly. Some corresponding &ldquo;xxx-default&rdquo; and &ldquo;xxx-supported&rdquo; Printer attributes are defined. This specification defines some Job Template attributes that apply to a multi-document Job as a whole and the &ldquo;output-device&rdquo; Job Template attribute that can apply to Documents and to Sheets as well as Jobs. This specification also defines some additional values for the &ldquo;job-state-reasons&rdquo; Job Description attribute. Each of the attributes defined in this specification are independent of each other and are OPTIONAL for a Printer to support.</p>
+    <h3>PWG 5100.7-2019: IPP Job Extensions v2.0 (JOBEXT) <a class="badge badge-primary" href="https://ftp.pwg.org/pub/pwg/candidates/cs-ippjobext20-20190816-5100.7.pdf">PDF</a></h3>
+    <p>This specification defines the "media-col" Job Template attribute and extends the Job management, monitoring, and processing capabilities of IPP.</p>
 
 
     <h3>PWG 5100.8-2003: IPP &quot;-actuals&quot; Attributes <a class="badge badge-primary" href="https://ftp.pwg.org/pub/pwg/candidates/cs-ippactuals10-20030313-5100.8.pdf">PDF</a></h3>
@@ -116,6 +116,9 @@ layout: bare
 
     <h3>PWG 5100.21-2019: IPP 3D Printing Extensions v1.1 (3D) <a class="badge badge-primary" href="https://ftp.pwg.org/pub/pwg/candidates/cs-ipp3d11-20190329-5100.21.pdf">PDF</a></h3>
     <p>This specification defines an extension to the Internet Printing Protocol and IPP Everywhere that supports printing of physical objects by Additive Manufacturing devices such as 3D printers.</p>
+
+    <h2>PWG 5100.22-2019: IPP System Service v1.0 (SYSTEM) <a class="badge badge-primary" href="https://ftp.pwg.org/pub/pwg/candidates/cs-ippsystem10-20191122-5100.22.pdf">PDF</a></h3>
+    <p>This specification defines an IPP binding of the System object, System Control Service, Resource Service, and registration operation as defined in various Semantic Model specifications (PWG 5108.06, PWG 5108.03, and PWG 5109.1).</p>
   </div>
 </div>
 <div class="row pwg-panel pwg-alt-0">
