--- a/ipp/index.html
+++ b/ipp/index.html
@@ -127,6 +127,13 @@ layout: bare
     <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippppx11-20191216-rev.pdf">Redlined</a>
     (Prototype Draft - Last Updated December 16, 2019)</p>
 
+    <p>IPP Transaction-Based Printing Extensions v1.1 (TRANS):
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ipptrans11-20191216.pdf">Clean</a>
+    &middot;
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ipptrans11-20191216-rev.pdf">Redlined</a>
+    (Initial Draft - Last Updated December 16, 2019)</p>
+
+
     <h3>White Paper/Tech Brief/Best Practice Drafts</h3>
 
     <p>Job Accounting with IPP v1.0:
