--- a/ipp/index.html
+++ b/ipp/index.html
@@ -133,13 +133,20 @@ layout: bare
     <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ipptrans11-20191216-rev.pdf">Redlined</a>
     (Initial Draft - Last Updated December 16, 2019)</p>
 
+    <h3>Registration Drafts</h3>
+
+    <p>IPP Label Printing Extensions v1.0 (LABEL):
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ipplabel10-20200115.pdf">Clean</a>
+    &middot;
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ipplabel10-20200115-rev.pdf">Redlined</a>
+    (Interim Draft - Last Updated January 15, 2020)</p>
 
     <h3>White Paper/Tech Brief/Best Practice Drafts</h3>
 
     <p>Job Accounting with IPP v1.0:
-	  <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippaccounting10-20191022.pdf">Clean</a>
-	  &middot;
-	  <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippaccounting10-20191022-rev.pdf">Redlined</a> (Interim Draft - Last Updated October 22, 2019)</p>
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippaccounting10-20191022.pdf">Clean</a>
+    &middot;
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippaccounting10-20191022-rev.pdf">Redlined</a> (Interim Draft - Last Updated October 22, 2019)</p>
   </div>
 </div>
 <div class="row pwg-panel pwg-alt-2">
