--- a/ipp/index.html
+++ b/ipp/index.html
@@ -128,18 +128,18 @@ layout: bare
     (Prototype Draft - Last Updated December 16, 2019)</p>
 
     <p>IPP Transaction-Based Printing Extensions v1.1 (TRANS):
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ipptrans11-20191216.pdf">Clean</a>
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ipptrans11-20200128.pdf">Clean</a>
     &middot;
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ipptrans11-20191216-rev.pdf">Redlined</a>
-    (Initial Draft - Last Updated December 16, 2019)</p>
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ipptrans11-20200128-rev.pdf">Redlined</a>
+    (Stable Draft - Last Updated January 28, 2020)</p>
 
     <h3>Registration Drafts</h3>
 
     <p>IPP Label Printing Extensions v1.0 (LABEL):
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ipplabel10-20200115.pdf">Clean</a>
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ipplabel10-20200128.pdf">Clean</a>
     &middot;
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ipplabel10-20200115-rev.pdf">Redlined</a>
-    (Interim Draft - Last Updated January 15, 2020)</p>
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ipplabel10-20200128-rev.pdf">Redlined</a>
+    (Stable Draft - Last Updated January 28, 2020)</p>
 
     <h3>White Paper/Tech Brief/Best Practice Drafts</h3>
 
